--- a/sequelize-demo/package.json
+++ b/sequelize-demo/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "sequelize",
+  "name": "sequelize-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.41.0"
+  }
 }
